k8s/cert-manager-setup.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
