k8s/prometheus-operator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-operator
  labels:
    app: prometheus-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-operator
  template:
    metadata:
      labels:
        app: prometheus-operator
    spec:
      serviceAccountName: prometheus-operator
      containers:
        - name: prometheus-operator
          image: quay.io/prometheus-operator/prometheus-operator:v0.62.0
          args:
            - --kubelet-service=kube-system/kubelet
            - --logtostderr=true
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-operator
spec:
  selector:
    app: prometheus-operator
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
